--- a/resources/css/foundation.css
+++ b/resources/css/foundation.css
@@ -566,10 +566,6 @@ th.large-12.last {
 .collapse th.large-12.last {
   width: 588px; }
 
-td.large-12 center,
-th.large-12 center {
-  min-width: 532px; }
-
 .body .columns td.large-12,
 .body .column td.large-12,
 .body .columns th.large-12,
@@ -1162,7 +1158,7 @@ body.outlook p {
 @media only screen {
   html {min-height:100%;background:#f3f3f3;}}
 
-@media only screen and (max-width:596px) {
+@media only screen and (max-width:768px) {
 .small-float-center {margin:0 auto !important;float:none !important;text-align:center !important;}
 .small-text-center {text-align:center !important;}
 .small-text-left {text-align:left !important;}
@@ -1214,3 +1210,8 @@ table.button.small-expand center, table.button.small-expanded center {min-width:
 .something-important {display:block !important;text-align:center;}
 .create-new-post {display:block !important;text-align:center;}
 .inner-body{max-width:100vw;}}
+
+@media only screen and (min-width:769px) {
+  td.large-12 center,
+  th.large-12 center {
+    min-width: 532px; }}
