--- a/resources/css/oc.css
+++ b/resources/css/oc.css
@@ -325,11 +325,6 @@ img.post-avatar {
   object-fit: contain;
   border-radius: 50%;
   float: left;
-  margin-right: 16px;
-}
-
-.post-right-side {
-  width: calc(100% - 48px) !important;
 }
 
 .token-link {
@@ -401,12 +396,37 @@ img.post-avatar {
   color: #3FBD7C;
 }
 
-.post-right-side h2.text-left, .post-right-side p.text-left {
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-  max-width: calc(74vw - 48px);
+span.must-see {
+  width: 52px;
+  margin-left: 4px;
+  font-family: Helvetica, Arial, sans-serif !important;
+  font-size: 16px;
+  font-weight: bold;
+  color: #5789FA;
+}
+
+td.post-block-avatar {
+  display: inline-block;
+  width: 48px;
+  min-height: 32px;
+  height: 100%;
+  vertical-align: top;
+}
+
+td.post-block-avatar-right {
+  display: inline-block;
+  min-height: 32px;
+  width: calc(100% - 52px);
+  height: 100%;
+  vertical-align: top;
+}
+
+td.post-block-right {
+  display: inline-block;
+  min-height: 32px;
   width: 100%;
+  height: 100%;
+  vertical-align: top;
 }
 
 /*
