--- a/resources/css/oc.css
+++ b/resources/css/oc.css
@@ -136,8 +136,14 @@ table.header-bottom {
   border-bottom: 1px solid #F0F0F1;
 }
 
+span.heart {
+  width: 20px;
+  height: 23px;
+  display: inline-block;
+}
+
 p.footer-paragraph {
-  color: #898D93;
+  color: #888D94;
   font-size: 14px;
   font-weight: 400;
 }
@@ -220,6 +226,18 @@ th.header-icon img {
   float: left;
 }
 
+th.header-right {
+  float: right;
+  text-align: right;
+}
+
+span.header-right-span {
+  text-align: right;
+  color: #C4C6C7;
+  font-size: 14px;
+  font-family: Helvetica, Arial, sans-serif !important;
+}
+
 img.read-post-image {
   width: 16px;
   height: 16px;
@@ -240,7 +258,7 @@ p.digest-bottom-footer-paragraph {
 }
 
 p.digest-footer-paragraph, p.digest-footer-paragraph a {
-  color: #99A0A7;
+  color: #888D94;
   font-size: 14px;
   font-weight: 400;
 }
@@ -288,7 +306,7 @@ span.oc-mention {
 
 
 .note-paragraph {
-  background-color: #FDF6E4 !important;
+  background-color: #D9F2E5 !important;
 }
 
 .note-paragraph.top-note-paragraph, .note-paragraph.top-note-paragraph tr, .note-paragraph.top-note-paragraph tr th {
@@ -365,9 +383,9 @@ img.post-avatar {
   font-size: 16px;
   font-weight: bold;
   color: #FB5E48;
-  width: 152px;
+  width: 128px;
   background-color: #FFDFDB;
-  border-radius: 100px;
+  border-radius: 6px;
   text-align: center;
   padding: 11px 0px;
 }
@@ -394,13 +412,60 @@ img.post-avatar {
   color: #3FBD7C;
 }
 
+span.post-title {
+  color: #34414F;
+}
+
+span.must-see-container {
+  background-color: rgba(97, 135, 248, .2);
+  padding: 0px 8px;
+  margin-left: 8px;
+  border-radius: 4px;
+}
+
+img.must-see-icon {
+  width: 8px;
+  height: 10px;
+  display: inline-block;
+}
+
 span.must-see {
   width: 52px;
   margin-left: 4px;
   font-family: Helvetica, Arial, sans-serif !important;
-  font-size: 16px;
+  font-size: 11px;
   font-weight: bold;
   color: #5789FA;
+}
+
+div.video-cover {
+  width: 137px;
+  height: 103px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  position: relative;
+}
+
+img.video-play {
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: -20px;
+  margin-top: -20px;
+}
+
+span.video-duration {
+  background-color: rgba(0, 0, 0, 0.4);
+  color: white;
+  border-radius: 4px;
+  font-family: Helvetica, Arial, sans-serif !important;
+  font-size: 11px;
+  padding: 2px 3px;
+  position: absolute;
+  bottom: 8px;
+  right: 8px;
 }
 
 td.post-block-avatar {
@@ -425,6 +490,23 @@ td.post-block-right {
   width: 100%;
   height: 100%;
   vertical-align: top;
+}
+
+div.logo-container {
+  width: 40px;
+  height: 40px;
+  padding: 7px;
+  background-color: transparent;
+  border: 1px solid #ECECEC;
+  border-radius: 4px;
+  margin: 0 auto;
+}
+
+img.logo {
+  background-color: #fff;
+  width: 40px;
+  height: 40px;
+  object-fit: contain;
 }
 
 /*
