Fix footer text color.

--- a/resources/css/oc.css
+++ b/resources/css/oc.css
@@ -159,7 +159,7 @@ p.header-paragraph {
 }
 
 p.footer-paragraph.bottom-footer, p.footer-paragraph.bottom-footer a {
-  color: #C4C6C7;
+  color: #888D94;
 }
 
 p.header-paragraph.top-header, p.footer-paragraph.top-header a {
