--- a/resources/css/oc.css
+++ b/resources/css/oc.css
@@ -139,9 +139,6 @@ table.header-bottom {
 span.heart {
   width: 18px;
   height: 20px;
-  background-size: 18px 20px;
-  background-repeat: no-repeat;
-  background-position: center;
   display: inline-block;
   vertical-align: sub;
 }
@@ -425,6 +422,9 @@ span.must-see-container {
   padding: 0px 8px;
   margin-left: 8px;
   border-radius: 4px;
+  white-space:nowrap;
+  line-height: 18px;
+  height: 18px;
 }
 
 img.must-see-icon {
@@ -440,6 +440,9 @@ span.must-see {
   font-size: 11px;
   font-weight: bold;
   color: #5789FA;
+  vertical-align: middle;
+  line-height: 13px;
+  height: 13px;
 }
 
 table.video-cover-table tr td {
