Add context to notification messages to show the complete post context in the email.

--- a/resources/css/oc.css
+++ b/resources/css/oc.css
@@ -307,7 +307,7 @@ span.oc-mention {
 
 
 .note-paragraph {
-  background-color: #D9F2E5 !important;
+  background-color: #FDF6E4 !important;
 }
 
 .note-paragraph.top-note-paragraph, .note-paragraph.top-note-paragraph tr, .note-paragraph.top-note-paragraph tr th {
