Add json+ld data to add Go to posts button to headline. Also add hidden span to avoid seeing content of the email in gmail preview.

--- a/resources/css/oc.css
+++ b/resources/css/oc.css
@@ -504,6 +504,10 @@ img.logo {
   object-fit: contain;
 }
 
+.hidden {
+  display: none;
+}
+
 /*
   Gmail doesn't linke multiple media queries, if you need to use
   @media only screen and (max-width:596px)
