Add reminder notification email.

--- a/resources/css/oc.css
+++ b/resources/css/oc.css
@@ -1,6 +1,7 @@
 body,
 html,
 .body {
+  /*background-color: #FBFAF7; */
   background-color: white;
   color: #34414F;
   width: 100%;
@@ -13,6 +14,7 @@ html,
 }
 
 table {
+  /*background-color: #FBFAF7 !important;*/
   background-color: white !important;
 }
 
@@ -88,6 +90,7 @@ table.footer a {
 }
 
 .header-table {
+  /*background-color: #FBFAF7 !important;*/
   background-color: white !important;
   max-width: 600px;
   width: 100%;
@@ -96,6 +99,7 @@ table.footer a {
 }
 
 .footer-table {
+  /*background-color: #FBFAF7 !important;*/
   background-color: white !important;
   max-width: 600px;
   width: 100%;
@@ -109,6 +113,21 @@ table.footer a {
   background-color: white !important;
   text-align: center;
   vertical-align: middle;
+  border-radius: 6px;
+}
+
+.email-content tr:first-child, .email-content tr:first-child td:first-child, .email-content tr:first-child th:first-child {
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+}
+
+.email-content tr:last-child, .email-content tr:last-child td:last-child, .email-content tr:last-child th:last-child {
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+}
+
+.email-content tr, .email-content tr td {
+  background-color: white !important;
 }
 
 .header-bottom-border {
@@ -157,6 +176,7 @@ p.header-paragraph {
 
 p.footer-paragraph.bottom-footer, p.footer-paragraph.bottom-footer a {
   color: #888D94;
+  text-align: center;
 }
 
 p.header-paragraph.top-header, p.footer-paragraph.top-header a {
@@ -306,7 +326,7 @@ span.oc-mention {
 }
 
 
-.note-paragraph {
+.note-paragraph, .note-paragraph tr, .note-paragraph tr th {
   background-color: #FDF6E4 !important;
 }
 
@@ -376,6 +396,19 @@ img.post-avatar {
 
 .center-align {
   text-align: center;
+}
+
+.view-reminders {
+  display: block;
+  margin: 0 auto;
+  font-size: 16px;
+  font-weight: bold;
+  color: white !important;
+  width: 128px;
+  background-color: #FA6654;
+  border-radius: 6px;
+  text-align: center;
+  padding: 11px 0px;
 }
 
 .go-to-posts {
@@ -506,6 +539,44 @@ img.logo {
 
 .hidden {
   display: none;
+}
+
+.reminders-footer {
+  background-color: #ECECEC;
+}
+
+.reminders-bottom-footer, .reminders-bottom-footer tr, .reminders-bottom-footer tr th,
+.reminders-bottom-footer .spacer, .reminders-bottom-footer .spacer tr, .reminders-bottom-footer .spacer tr th {
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
+}
+
+.reminders-footer-paragraph {
+  font-family: Helvetica, Arial, sans-serif !important;
+  font-size: 14px;
+  font-weight: 400;
+  color: #888D94;
+  text-align: center;
+}
+
+.reminders-footer-paragraph a, .reminders-footer-paragraph a:visited {
+  color: #888D94;
+  text-decoration: underline;
+}
+
+.top-email-content, .top-email-content tr, .top-email-content tr th,
+.top-email-content .spacer, .top-email-content .spacer tr, .top-email-content .spacer tr th {
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+}
+
+h2.reminder-headline {
+  text-align: center;
+  font-family: Helvetica, Arial, sans-serif !important;
+  font-size: 16px;
+  font-weight: bold;  
+  color: #34414F;
+  margin: 0px;
 }
 
 /*
