--- a/resources/css/oc.css
+++ b/resources/css/oc.css
@@ -178,7 +178,6 @@ table.email-content tr td.vertical-padding, table.email-content tr td.columns.ve
   background-color: white !important;
   border-radius: 8px;
   border-left: 1px solid #E5E4E4;
-  padding-left: 4px;
   border-top: 1px solid #E5E4E4;
   border-right: 1px solid #E5E4E4;
   border-bottom: 1px solid #E5E4E4;
@@ -188,7 +187,14 @@ table.email-content tr td.vertical-padding, table.email-content tr td.columns.ve
 .digest-content > tr > th,
 .digest-content > tbody > tr > td,
 .digest-content > tr > td {
-  padding: 0 24px !important;
+  padding: 0 24px 0 27px !important;
+}
+
+.digest-content.must-see > tbody > tr > th,
+.digest-content.must-see > tr > th,
+.digest-content.must-see > tbody > tr > td,
+.digest-content.must-see > tr > td {
+  padding: 0 24px 0 24px !important;
 }
 
 .digest-content table, .digest-content table tr {
@@ -197,7 +203,6 @@ table.email-content tr td.vertical-padding, table.email-content tr td.columns.ve
 
 .digest-content.must-see {
   border-left: 4px solid #6187F8;
-  padding-left: 0px;
 }
 
 .email-content > tr:last-child,
@@ -477,6 +482,14 @@ p.digest-post-date {
   font-size: 12px;
   line-height: 18px;
   margin-left: 4px;
+}
+
+p.digest-post-seen {
+  float: right;
+  color: #888D94;
+  font-family: LucidaGrande, Arial, sans-serif !important;
+  font-size: 12px;
+  line-height: 18px;
 }
 
 p.digest-post-footer {
