--- a/resources/css/oc.css
+++ b/resources/css/oc.css
@@ -167,8 +167,8 @@ table.email-content tr td.vertical-padding, table.email-content tr td.columns.ve
 }
 
 .digest-header-subline {
-  font-weight: 900;
-  font-size: 12px;
+  font-weight: bold;
+  font-size: 14px;
   color: #888D94;
   text-align: center;
   background-color: transparent;
@@ -454,8 +454,8 @@ img.post-avatar {
 }
 
 img.digest-post-avatar {
-  width: 16px;
-  height: 16px;
+  width: 24px;
+  height: 24px;
   object-fit: contain;
   border-radius: 50%;
   float: left;
@@ -470,7 +470,7 @@ p.digest-post-author {
   color: #34414F;
   font-family: Helvetica, Arial, sans-serif !important;
   font-size: 12px;
-  line-height: 18px;
+  line-height: 24px;
   font-weight: bold;
   margin-left: 8px;
 }
@@ -480,7 +480,7 @@ p.digest-post-date {
   color: #888D94;
   font-family: Helvetica, Arial, sans-serif !important;
   font-size: 12px;
-  line-height: 18px;
+  line-height: 24px;
   margin-left: 4px;
 }
 
@@ -489,7 +489,7 @@ p.digest-post-seen {
   color: #888D94;
   font-family: LucidaGrande, Arial, sans-serif !important;
   font-size: 12px;
-  line-height: 18px;
+  line-height: 24px;
 }
 
 p.digest-post-footer {
