--- a/resources/css/oc.css
+++ b/resources/css/oc.css
@@ -136,6 +136,10 @@ div.digest-date {
   vertical-align: middle;
 }
 
+.footer-table.digest-footer-table {
+  border-top: 1px solid rgba(36, 45, 66, 0.1);
+}
+
 .email-content {
   max-width: 564px;
   width: 100%;
@@ -238,6 +242,15 @@ p.header-paragraph {
 p.footer-paragraph.bottom-footer, p.footer-paragraph.bottom-footer a {
   color: #888D94;
   text-align: center;
+}
+
+p.footer-paragraph.bottom-footer.underline-link a {
+  text-decoration: underline;
+}
+
+.footer-table.digest-footer-table p.footer-paragraph.bottom-footer,
+.footer-table.digest-footer-table p.footer-paragraph.bottom-footer a {
+  text-align: left;
 }
 
 p.header-paragraph.top-header, p.footer-paragraph.top-header a {
@@ -449,7 +462,7 @@ p.digest-post-footer {
   color: rgb(52, 65, 79, 0.5);
   font-family: Helvetica, Arial, sans-serif !important;
   font-size: 12px;
-  line-height: 18px; 
+  line-height: 18px;
 }
 
 p.digest-post-footer span.new-comments {
@@ -705,7 +718,7 @@ p.post-body {
 }
 
 .no-padding {
-  padding: 0 !important; 
+  padding: 0 !important;
 }
 
 /*
