--- a/resources/css/oc.css
+++ b/resources/css/oc.css
@@ -27,12 +27,23 @@ table th.body-spacer {
   background-color: white !important;
 }
 
+.email-content h1, .email-content h2, .email-content h3, .email-content h4,
+.email-content h5, .email-content h6, .email-content p, .email-content td,
+.email-content th, .email-content a {
+  text-align: center;
+}
+
+.email-content .text-left {
+  text-align: left;
+}
+
 h1 {
   font-family: Helvetica, Arial, sans-serif !important;
-  font-size: 24px;
-  font-weight: bold;
+  font-size: 18px;
+  font-weight: normal;
   color: #34414F;
   margin: 0px;
+  text-align: center;
 }
 
 h2 {
@@ -41,6 +52,7 @@ h2 {
   font-weight: bold;
   color: #3FBD7C;
   margin: 0px;
+  text-align: center;
 }
 
 h2.digest-post-title {
@@ -57,6 +69,7 @@ p {
   color: #34414F;
   line-height: 1.5;
   margin: 0px;
+  text-align: center;
 }
 
 p.board-name {
@@ -195,7 +208,6 @@ center > table.footer-table {
   font-size: 16px;
   color: #34414f;
   font-weight: normal;
-  text-align: left;
   line-height: 18px;
 }
 
@@ -375,7 +387,7 @@ table.footer-table a.footer-link {
 
 span.note-author-name {
   float: left;
-  padding-top: 4px;
+  padding: 0 8px;
   font-weight: bold;
   font-size: 14px;
 }
@@ -475,7 +487,7 @@ span.oc-mention {
 
 
 .note-paragraph, .note-paragraph tr, .note-paragraph tr th {
-  background-color: #FDF6E4 !important;
+  background-color: #ECECEC !important;
 }
 
 .note-paragraph.top-note-paragraph, .note-paragraph.top-note-paragraph tr, .note-paragraph.top-note-paragraph tr th {
@@ -488,7 +500,7 @@ span.oc-mention {
   border-bottom-right-radius: 6px;
 }
 
-.note-paragraph .text-left {
+.note-paragraph p {
   margin-left: 24px;
   margin-right: 24px;
 }
@@ -551,13 +563,6 @@ p.digest-post-footer span.new-comments {
   margin-left: 4px;
 }
 
-p.invite-link-instructions {
-  text-align: center;
-  color: #34414F;
-  font-size: 16px;
-  text-align: center;
-}
-
 .token-link {
   color: #3FBD7C;
   font-size: 16px;
@@ -571,12 +576,13 @@ p.invite-link-instructions {
 }
 
 .green-button {
+  margin: 0 auto;
   display: block;
-  float: left;
   font-size: 14px;
   font-weight: bold;
   color: white;
-  min-width: 220px;
+  width: auto;
+  max-width: 140px;
   background-color: #52C489;
   border-radius: 6px;
   text-align: center;
@@ -796,6 +802,15 @@ p.post-body {
   font-weight: normal;
   letter-spacing: 0;
   text-align: left;
+}
+
+a {
+  color: #3FBD7C;
+}
+
+a:hover {
+  color: #3FBD7C;
+  text-decoration: underline;
 }
 
 .no-padding {
