--- a/resources/css/oc.css
+++ b/resources/css/oc.css
@@ -172,7 +172,7 @@ center > table.footer-table {
 }
 
 .follow-up-email-content {
-  max-width: 564px; 
+  max-width: 564px;
   width: 100%;
   text-align: center;
   vertical-align: middle;
@@ -831,6 +831,13 @@ table.body .column .columns {
   font-size: 12px;
   font-weight: bold;
   color: #3fbd7c;
+}
+
+h1.token-headeer {
+  font-family: Helvetica, Arial, sans-serif !important;
+  font-size: 20px;
+  font-weight: normal;
+  color: #34414f;
 }
 
 /*
