--- a/resources/css/oc.css
+++ b/resources/css/oc.css
@@ -606,16 +606,16 @@ p.digest-post-footer span.new-comments {
 
 .green-button {
   margin: 0 auto;
-  display: block;
+  display: inline-block;
   font-size: 14px;
   font-weight: bold;
   color: white;
   width: auto;
-  max-width: 140px;
+  max-width: 210px;
   background-color: #52C489;
   border-radius: 6px;
   text-align: center;
-  padding: 11px 0px;
+  padding: 11px 16px;
 }
 
 .auto-x-margin {
