--- a/resources/css/oc.css
+++ b/resources/css/oc.css
@@ -73,6 +73,16 @@ p {
   text-align: center;
 }
 
+pre {
+  font-family: monospace !important;
+  font-size: 14px;
+  color: #34414F;
+  padding: 4px;
+  border-radius: 6px;
+  background-color: rgba(36, 45, 66, 0.08);
+  text-align: left;
+}
+
 p.board-name {
   color: #888D94;
   font-size: 18px;
@@ -530,9 +540,11 @@ span.oc-mention {
   text-align: left;
 }
 
-.note-paragraph p {
+.note-paragraph p, .note-paragraph pre {
   margin-left: 24px;
   margin-right: 24px;
+  margin-top: 0;
+  margin-bottom: 0;
   text-align: left;
 }
 
@@ -844,7 +856,7 @@ span.post-title {
   color: #2BA767;
 }
 
-div.post-body, div.post-body p {
+div.post-body, div.post-body p, div.post-body pre {
   color: #34414f;
   font-size: 14px;
   line-height: 17px;
